[tool.poetry]
name = "almufarrigh"
version = "0.0.1"
description = "الواجهة الرسومية الخاصة بأداة تفريغ على أنظمة التشغيل المختلفة"
authors = [{ name = "الكتب المٌيسّرة", email = "easybooksdev@gmail.com" }]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ieasybooks/almufarrigh/"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyside6 = "^6.5.0"
tafrigh = {version = "^1.1.1", extras = ["wit", "whisper"]}
pydantic = "^2.1.1"
torch = "2.0.0"
torchaudio = "2.0.1"

[tool.poetry.group.dev.dependencies]
absolufy-imports = "^0.3.1"
black = "^23.7.0"
mypy = "^1.5.1"
pre-commit = "^3.3.3"
ruff = "^0.0.287"
cx-freeze = "^6.15.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]  # https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
line-length = 100
target-version = ["py310"]
include = '(src\/.*$|\.pyi?$)'
extend-exclude = '''
(
  ^/.git
  | __pycache__
  | ^/.venv
  | .*.png
  | .*.qml
  | .*.svg
  | .*.ico
  | .*.ttf
  | .*.qrc
  | .*.bat
  | src/resources_rc.py
)
'''

[tool.mypy]  # https://mypy.readthedocs.io/en/latest/config_file.html
files = ["src"]
follow_imports = "skip"
strict = true
disallow_subclassing_any = false
disallow_untyped_decorators = false
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true

[tool.ruff]  # https://github.com/charliermarsh/ruff
fix = true
ignore-init-module-imports = true
line-length = 100
select = ["A", "B", "BLE", "C4", "C90", "D", "DTZ", "E", "ERA", "F", "G", "I", "INP", "ISC", "N", "NPY", "PGH", "PIE", "PLC", "PLE", "PLR", "PLW", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "S", "SIM", "T10", "T20", "TID", "UP", "W", "YTT"]
ignore = ["E501", "PGH001", "RET504", "S101", "D211", "D213", "N802", "D102", "ERA001"]
unfixable = ["ERA001", "F401", "F841", "T201", "T203"]
src = ["src", "tests"]
target-version = "py310"
