[tool.poetry]
name = "almufarrigh"
version = "0.0.1"
description = "الواجهة الرسومية الخاصة بأداة تفريغ على أنظمة التشغيل المختلفة"
authors = ["ieasybooks <easybooksdev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ieasybooks/almufarrigh/"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
pyside6 = "^6.6.1"
pydantic = "^2.5.2"

[tool.poetry.group.wit]
optional = true

[tool.poetry.group.wit.dependencies]
tafrigh = { version = "^1.1.3", extras = ["wit"] }

[tool.poetry.group.whisper]
optional = true

[tool.poetry.group.whisper.dependencies]
tafrigh = { version = "^1.1.3", extras = ["wit", "whisper"] }

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"
ruff = "^0.7.0"
pyinstaller = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]  # https://mypy.readthedocs.io/en/latest/config_file.html
files = ["src"]
follow_imports = "skip"
strict = true
disallow_subclassing_any = false
disallow_untyped_decorators = false
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true

[tool.ruff]  # https://github.com/charliermarsh/ruff
fix = true
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["A", "B", "BLE", "C4", "C90", "D", "DTZ", "E", "ERA", "F", "G", "I", "INP", "ISC", "N", "NPY", "PGH", "PIE", "PLC", "PLE", "PLR", "PLW", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "S", "SIM", "T10", "T20", "TID", "UP", "W", "YTT"]
ignore = ["E501", "S307", "RET504", "S101", "D211", "D213", "N802", "D102", "ERA001", "ISC001", "D203"]
unfixable = ["ERA001", "F401", "F841", "T201", "T203"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
indent-style = "space"
